--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   motion_toast: ^2.1.1
   form_field_validator: ^1.1.0
+  simple_animations: ^4.0.1
 
 dev_dependencies:
   flutter_test:
