--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   motion_toast: ^2.1.1
   form_field_validator: ^1.1.0
   simple_animations: ^4.0.1
+  flutter_spinkit: ^5.1.0
+  flutter_speed_dial: ^5.0.0+1
 
 dev_dependencies:
   flutter_test:
