--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   simple_animations: ^4.0.1
   flutter_spinkit: ^5.1.0
   flutter_speed_dial: ^5.0.0+1
+  http: ^0.13.4
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
